[package]

name = "term"
version = "1.0.1"
authors = ["The Rust Project Developers", "Steven Allen"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Stebalien/term"
homepage = "https://github.com/Stebalien/term"
documentation = "https://docs.rs/term/"
description = """
A terminal formatting library
"""
categories = ["command-line-interface"]
edition = "2021"
rust-version = "1.63"

[dependencies]
home = ">0.5.5, <0.5.11"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Storage",
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
  "Win32_Security",
]

[features]
default=[]
